* improve results writer for multiples custom timers in same test
* checked compatibility of the browser with python3.4
* 2to3 passed for browser, no change needed
* update GenericTransaction, now using custom browser
* Old GenericTransaction methods still unchanged
* Updated documentation examples for new browser
* Global documentation update

0.3 to 0.3.1
============

* Update requirements in setup for cssselect

0.3.1 to 0.3.2
==============

* Remove matplotlib from setup dependencies
* now using pygal for graphs renders
* updated multimechanize graph and results file
* now generating svg files for graph
* clean up dependencies globaly
* updated css file for graph size

0.3.2 to 0.3.3
==============

* refactore multi-mechanize core for python3
* compatibility for python3.4 started
* keep compatibility for python >= 2.7 using six
* added six to requirements
* tested basic functionality, all ok for both python 2.7 and python 3.4
* refactor most of the documentation
* update graph render

0.3.3 to 0.3.4
==============

* Global code cleaning
* improve python3 support
* update setup long_description
* update documentation
* starting unittest
* fix warning for browser, manually close connection after a request

0.3.4 to 0.3.5
==============

* update browser and add headers feature. Can add or delete a header or set all headers
* abandon get_statics method from generic transaction, not representative of real case
* get_statics -> use csv_file and load each url as user will be more performant...
* fix a bug inside check_status_response function
* update command oct-run
* update newproject for adding celery configuration
* added full celery support for running test through the oct-run command
* keep multimech-run command
* results.csv file now updated via logger object with oct-run
* transaction number no longer displayed in results
* oct-run will now clean all tasks running if KeyBoardInterrupt exception occur
* update browser for headers support
